fix navbar not workin on mobile

--- a/src/components/Chat/ChatBubble.css
+++ b/src/components/Chat/ChatBubble.css
@@ -44,22 +44,22 @@
     background-color: #fff;
   }
   
-  p[class^="from-me"] {
-    /* margin: 0.5rem 0; */
+  /* p[class^="from-me"] {
+    margin: 0.5rem 0;
     width: fit-content;
   }
   
   p.from-me ~ p.from-me {
-    /* margin: 0.25rem 0 0; */
+    margin: 0.25rem 0 0;
   }
   
   p.from-me ~ p.from-me:not(:last-child) {
-    /* margin: 0.25rem 0 0; */
+    margin: 0.25rem 0 0;
   }
   
   p.from-me ~ p.from-me:last-child {
-    /* margin-bottom: 0.5rem; */
-  }
+    margin-bottom: 0.5rem;
+  }*/
   
   p.from-them {
     align-items: flex-start;
